страница просмотра вакансии и правки по верстке

--- a/src/components/all-resume/all-resume.pug
+++ b/src/components/all-resume/all-resume.pug
@@ -121,7 +121,7 @@ mixin all-resume()
                   +e('input')(type='text')
                   +e('input')(type='text')
               +b('button').vl-btn.btn-card.btn-red Применить
-          +e.center
+          +e.center.scroll
             +b.single-card-resume
               +e.top
                 +e('img')(src='assets/images/resume_image_1.png' alt='').left-img
