--- a/src/components/modal-block/modal-block.sass
+++ b/src/components/modal-block/modal-block.sass
@@ -108,11 +108,11 @@
       padding: 20px 0 20px 40px
       font-size: 16px
       font-weight: 400
-      color: #a8a8a8
+      color: #a8a8a8 !important
       box-shadow: 0 0 59px rgba(40, 40, 40, 0.05)
       border-radius: 10px
       border: 1px solid #e8e8e8
-      background-color: #ffffff
+      background-color: #ffffff !important
       @media (max-width: 1200px)
         width: 350px
       @media (max-width: 576px)
@@ -124,11 +124,11 @@
       padding: 20px 20px 20px
       font-size: 16px
       font-weight: 400
-      color: #000000
+      color: #000000 !important
       box-shadow: 0 0 59px rgba(40, 40, 40, 0.05)
       border-radius: 10px
       border: 1px solid #e8e8e8
-      background-color: #ffffff
+      background-color: #ffffff !important
 
     & button
       position: relative
