--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -17,13 +17,13 @@ mixin header()
               +e('a').nav-item(href='resume.html') Резюме
               //+e('a').nav-item(href='all-resume.html') Поиск резюме
               +e('button').nav-item.jsLogin Вход
-              //+b.dropdown.jsMenu
-              //  +b('span').home__nav-item.jsOpenMenu User
-              //    +b('span') >
-              //  +e.menu.jsShowMenu
-              //    +b('span').nhome__nav-item.mobile-prev.jsMenuPrev Назад
-              //    +b('a')(href='/personal-area').home__nav-item Личный кабинект
-              //    +b('a')(href='/personal-area').home__nav-item Выйти
+              +b.dropdown.jsMenu
+                +b('span').home__nav-item.jsOpenMenu User
+                  +b('span') >
+                +e.menu.jsShowMenu
+                  +b('span').nhome__nav-item.mobile-prev.jsMenuPrev Назад
+                  +b('a')(href='/personal-area').home__nav-item Личный кабинект
+                  +b('a')(href='/personal-area').home__nav-item Выйти
             +e.main-email.d-flex.align-items-center
               +e('span').main-ico @
               a(href='mailto:info@vendoram.ru') info@vendoram.ru
