--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -7,7 +7,7 @@
   height: 100vh
   overflow: hidden
   background-color: $bg
-  @media (max-height: 700px)
+  @media (max-height: 650px)
     overflow-y: auto
     overflow-x: hidden
   @media (max-width: 993px)
@@ -27,7 +27,7 @@
       width: 230px
   &__circle
     position: absolute
-    z-index: 2
+    z-index: 0
     bottom: -380px
     right: -230px
     @media (max-width: 1100px)
@@ -380,6 +380,7 @@
       justify-content: center
     & .white-text
       margin: 0 5px
+      color: #ffffff
       font-weight: 700
       text-decoration: underline
   &__callback
