--- a/src/components/all-vacancies/all-vacancies.sass
+++ b/src/components/all-vacancies/all-vacancies.sass
@@ -213,12 +213,12 @@
           display: flex
           align-items: center
           justify-content: center
-          width: 201px
-          height: 37px
+          width: auto
+          height: 30px
           margin-left: auto
           color: #ffffff
           font-weight: 700
-          font-size: 14px
+          font-size: 13px
           border-radius: 19px
           background-color: #dd3d34
           @media (max-width: 500px)
