--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -10,9 +10,7 @@ mixin nhome()
       +e.main-top
         +e.main-header
           +b('button').mobile-nav-btn.jsOpenNavMenu
-            +e('span')
-            +e('span')
-            +e('span')
+            +e('img')(src='assets/images/menu.png' alt='')
           +b.filter-overlay.nav-overlay.jsNavOverlay
           +e('nav').nav.jsNavMenu
             +e('a').nav-item_logo(href='index.html')
