--- a/src/shared/sass/buttons.sass
+++ b/src/shared/sass/buttons.sass
@@ -60,7 +60,7 @@
   align-items: center
   width: 30px
   height: 30px
-  padding: 0
+  padding: 5px
   background-image: linear-gradient(to left, #dd3d34 0%, #af2a22 99%, #af2a22 100%)
   border: none
   border-radius: 10px
