--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -7,9 +7,7 @@ mixin header()
         +b.home__main-top
           +e.main-header
             +b('button').mobile-nav-btn.jsOpenNavMenu
-              +e('span')
-              +e('span')
-              +e('span')
+              +e('img')(src='assets/images/menu.png' alt='')
             +b.filter-overlay.nav-overlay.jsNavOverlay
             +e('nav').nav.jsNavMenu
               +e('a').nav-item_logo(href='index.html')
