--- a/src/components/single-vacancy/single-vacancy.sass
+++ b/src/components/single-vacancy/single-vacancy.sass
@@ -126,6 +126,9 @@
   &__price
     display: flex
     align-items: center
+    @media (max-width: 768px)
+      align-items: flex-start
+      flex-direction: column
 
     & > span
       margin-right: 60px
@@ -133,6 +136,9 @@
       font-size: 29px
       color: #0d1566
       white-space: nowrap
+      @media (max-width: 768px)
+        margin-bottom: 20px
+        margin-right: 0
       @media (max-width: 476px)
         margin-right: 20px
 
@@ -509,3 +515,4 @@
   display: none
   @media (max-width: 992px)
     display: flex
+    width: 100%
