лого для мобильных устройств и правки по верстке

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -12,6 +12,7 @@ mixin header()
             +e('nav').nav.jsNavMenu
               +e('a').nav-item_logo(href='index.html')
                 +e('img')(src='assets/images/logo-main.png')
+                +e('img')(src='assets/images/logo_mob.png')
               +e('a').nav-item(href='resume.html') Резюме
               //+e('a').nav-item(href='all-resume.html') Поиск резюме
               +e('button').nav-item.jsLogin Вход
