--- a/src/components/single-vacancy/single-vacancy.pug
+++ b/src/components/single-vacancy/single-vacancy.pug
@@ -14,7 +14,9 @@ mixin single-vacancy()
           +e('img')(src='assets/images/logo_company.svg' alt='').logo
           +e.first
             +b.category-block
-              +b('a')(href='#').btn-card.btn-card-small.btn-gray Администрация
+              +b('a')(href='#').btn-card.btn-card-small.btn-gray Администрация, руководство
+              +b('a')(href='#').btn-card.btn-card-small.btn-gray Бухгалтерия, аудит
+              +b('a')(href='#').btn-card.btn-card-small.btn-gray Гостинично-русторанный бизнес
             +e('span') Добавлено:<br> 19 марта 2018, 17:15
             +e.view
               +e('img').icon.mr5(src='assets/images/icon-eye.png' alt='')
