--- a/src/components/header/header.sass
+++ b/src/components/header/header.sass
@@ -50,7 +50,22 @@
   & .home__nav-item_logo
     width: 200px
     @media (max-width: 1250px)
+      position: relative
+      width: 100%
+      height: 60px
+    & img:first-child
+      @media (max-width: 1250px)
+        display: none
+    & img:last-child
       display: none
+      @media (max-width: 1250px)
+        position: absolute
+        top: 50%
+        left: 10px
+        display: block
+        width: 200px
+        min-height: 200px
+        transform: translateY(-50%)
 
   & .home__main-header
     justify-content: center
