--- a/src/components/home/home.sass
+++ b/src/components/home/home.sass
@@ -381,6 +381,7 @@
         display: flex
         align-items: center
         width: 100%
+        height: 60px
         padding: 20px
         color: #a8a8a8
         border-bottom: 1px solid #e8e8e8
@@ -559,5 +560,5 @@
 @media (max-width: 1250px)
   .home__main-header .home__nav-item
     color: #000000
-  .home__nav > .home__nav-item:nth-child(2)
+  .home__nav > .home__nav-item:nth-child(1)
     margin-top: 60px
