--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -8,6 +8,7 @@
   overflow: hidden
   background-color: $bg
   @media (max-height: 650px)
+    height: 100%
     overflow-y: auto
     overflow-x: hidden
   @media (max-width: 993px)
@@ -27,9 +28,11 @@
       width: 230px
   &__circle
     position: absolute
+    bottom: 0
+    right: 0
+    border: 100px solid #dd3d34
+    border-radius: 100% 0 0 0
     z-index: 0
-    bottom: -380px
-    right: -230px
     @media (max-width: 1100px)
       display: none
   &__dots1
@@ -450,11 +453,24 @@
           width: 100%
       &_logo
         position: relative
+        height: 60px
         margin: -12px auto 0
         padding: 0
         z-index: 2
-        @media (max-width: 1250px)
+        & img:first-child
+          @media (max-width: 1250px)
+            display: none
+        & img:last-child
           display: none
+          @media (max-width: 1250px)
+            position: absolute
+            top: 50%
+            left: 10px
+            display: block
+            width: 200px
+            min-height: 200px
+            transform: translateY(-50%)
+
   &__footer
     position: relative
     z-index: 1
@@ -711,5 +727,5 @@
     margin-right: 0 !important
 
 @media (max-width: 1250px)
-  .nhome__nav > .nhome__nav-item:nth-child(2)
+  .nhome__nav > .nhome__nav-item:nth-child(1)
     margin-top: 60px
