--- a/src/components/single-vacancy/single-vacancy.sass
+++ b/src/components/single-vacancy/single-vacancy.sass
@@ -57,7 +57,7 @@
   &__logo
     position: absolute
     top: 15px
-    right: 15px
+    right: 5px
     width: 80px
     height: auto
     @media (max-width: 1200px)
@@ -94,7 +94,7 @@
   &__view
     display: flex
     align-items: center
-    margin: 5px 95px 5px 10px
+    margin: 5px 15px 5px 10px
     @media (max-width: 769px)
       margin-right: 30px
     @media (max-width: 476px)
@@ -438,7 +438,9 @@
 
 .category-block
   display: flex
-  flex-wrap: wrap
+  align-items: flex-start
+  flex-direction: column
+  max-width: 220px
 
   & .btn-card
     margin-bottom: 5px
