--- a/src/components/single-vacancy/single-vacancy.pug
+++ b/src/components/single-vacancy/single-vacancy.pug
@@ -100,8 +100,7 @@ mixin single-vacancy()
                   +e.top
                     +e.cat-city
                       a.btn-card.btn-card-small.btn-gray(href='#') Strategy Partners
-                    +e('a')(href='#' title='Дизайнер презентаций').title Дизайнер презентаций
-
+                    +e('a')(href='#' title='Дизайнер презентаций').title Промоутер для работы в ТЦ "Континент"
                 +e.info
                   p Полная занятость, неполная занятость, удаленная работа, готовы взять студента. Высшее образование.
                     | Strategy partners - международная компания, занимающаяся стрстегическим консалтингом, расширяет свою команду...
