--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,4 +1,4 @@
-mixin hea•••••••••der()
+mixin header()
   +b('header').header-wrap.jsHeaderIndex
     //+e('img')(src='assets/images/dots__small.png' alt='').dots
     +e('img')(src='assets/images/img2.png' alt='').emblem
