--- a/src/components/single-vacancy/single-vacancy.sass
+++ b/src/components/single-vacancy/single-vacancy.sass
@@ -489,7 +489,7 @@
 
   &__title
     display: block
-    width: 280px
+    width: auto
     margin: 15px 0 0
     font-size: 14px
     color: #2a2a2a
