--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -44,7 +44,8 @@ mixin nhome()
         +e('img')(src='assets/images/home-big-circle.png' alt='').main-big-circle
         +e('img')(src='assets/images/gerb-doneck-z1.png' alt='').main-gerb
         +e('h1').title Работа
-        +e('p').desc Сделайте грамотный выбор! Предлагаем размещение и продвижение на новой и перспективной площадке <span class="yellow-text">РаботаДНР</span>. Станьте первым и получайте максимум продаж, опережая конкурентов на несколько шагов. Полностью берем на себя все, что связано с размещением на маркетплейсе, эффективно управляем ценами и поставками
+        +e('p').desc.desc-pc Сделайте грамотный выбор! Предлагаем размещение и продвижение на новой и перспективной площадке <span class="yellow-text">РаботаДНР</span>. Станьте первым и получайте максимум продаж, опережая конкурентов на несколько шагов. Полностью берем на себя все, что связано с размещением на маркетплейсе, эффективно управляем ценами и поставками
+        +e('p').desc.desc-mob Сделайте грамотный выбор! Предлагаем размещение и продвижение на новой и перспективной площадке <span class="yellow-text">РаботаДНР</span>.
         +e('img').main-bottom-img(src='assets/images/img1.png' img='')
     +e('aside').aside
       +e('img').dots2(src='assets/images/bg-dots.png' alt='')
