--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -554,6 +554,8 @@
     margin-left: 5px
     margin-right: 0
     padding: 20px
+  @media (max-width: 375px)
+    padding: 20px 10px
   &__title
     max-width: 555px
     font-size: 15px
@@ -721,7 +723,9 @@
     margin-left: 16px
 
 .home-card.slick-slide
-  height: 270px !important
+  height: 230px !important
+  @media (max-width: 375px)
+    height: 270px !important
 
 .home-card.slick-slide.slick-current.slick-active
   width: 96% !important
