--- a/src/components/single-vacancy/single-vacancy.pug
+++ b/src/components/single-vacancy/single-vacancy.pug
@@ -6,7 +6,7 @@ mixin single-vacancy()
       +b('ul').result-search
         +e('li') Результаты поиска ·
         +e('li') Вакансии  в Донецке ·
-        +e('li') Менеджер по холодным звонкам
+        +e('li') Менеджер по холодным звонкамс
       +b.single-block.single-block-slider
         +b('button').mobile-contacts.jsShowContacts.jsShowContactsFlag
           +e('img')(src='assets/images/add-contact.svg' alt='')
