Правка текста в слайдере на главной

--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -71,8 +71,8 @@ mixin nhome()
                     span 255
             +e.info
               p Полная занятость, неполная занятость, удаленная работа, готовы взять студента. Высшее образование.
-              p Strategy partners - международная компания, занимающаяся стрстегическим консалтингом, расширяет свою команду...
-            .d-flex.flex-wrap.align-items-center.justify-content-start.mt-auto
+              //p Strategy partners - международная компания, занимающаяся стрстегическим консалтингом, расширяет свою команду...
+            .d-flex.flex-wrap.align-items-center.justify-content-start
               a.btn-card.btn-red.jsVacancyModal(data-id="1") Откликнуться
               +e('a').like(href='#')
                 i.fa.fa-heart-o
