стрелочка возле логина

--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -18,6 +18,7 @@ mixin header()
               +e('button').nav-item.jsLogin Вход
               +b.dropdown.jsMenu
                 +b('span').home__nav-item.jsOpenMenu User
+                  +e('img')(src='assets/images/down-arrow.svg' alt='')
                   +b('span') >
                 +e.menu.jsShowMenu
                   +b('span').nhome__nav-item.mobile-prev.jsMenuPrev Назад
