--- a/src/components/nhome/nhome.sass
+++ b/src/components/nhome/nhome.sass
@@ -447,7 +447,6 @@
       &:hover
         color: $red
       &.nav-btn
-        display: block
         width: 155px
         text-align: left
         @media (max-width: 1250px)
@@ -473,6 +472,9 @@
             width: 200px
             min-height: 200px
             transform: translateY(-50%)
+
+    & .dropdown
+      height: auto
 
   &__footer
     position: relative
