--- a/src/components/single-task/single-task.sass
+++ b/src/components/single-task/single-task.sass
@@ -109,7 +109,7 @@
   &__title
     margin: 0 0 17px
     color: #000000
-    font-size: 22px
+    font-size: 20px
     font-weight: 700
 
   &__price
@@ -152,22 +152,16 @@
 
 .task-slider
   position: relative
-  width: 510px
-
-  @media (max-width: 992px)
-    width: 335px
-
-  @media (max-width: 575px)
-    width: 165px
+  width: 100%
 
   &__slide
-    width: 160px
-    height: 120px
-    margin-right: 10px
+    width: 216px
+    height: 149px
+    margin-right: 14px
 
   & .nextTask
     position: absolute
-    right: -81px
+    right: 0
     top: 27px
     width: 28px
     height: auto
@@ -179,7 +173,7 @@
 
   & .prevTask
     position: absolute
-    right: -60px
+    right: 0
     top: 52px
     width: 28px
     height: auto
@@ -189,6 +183,16 @@
     outline: none
     cursor: pointer
     transform: rotate(180deg)
+
+.slick-list
+  width: 510px
+  margin: 0 auto
+
+  @media (max-width: 992px)
+    width: 335px
+
+  @media (max-width: 575px)
+    width: 200px
 
 .stask-performers-right
   display: flex
