--- a/src/components/all-performers/all-performers.pug
+++ b/src/components/all-performers/all-performers.pug
@@ -139,3 +139,5 @@ mixin all-performers()
                     +e('img')(src='assets/images/fb.svg' alt='')
                   +b('a')(href='#').inst-bg
                     +e('img')(src='assets/images/instagram.svg' alt='')
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
