--- a/src/components/all-resume/all-resume.pug
+++ b/src/components/all-resume/all-resume.pug
@@ -406,3 +406,5 @@ mixin all-resume()
                   +e('span')
                     +e('img')(src='assets/images/speaker-side-view.svg' alt='')
                     | 4
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
