--- a/src/components/single-performers/single-performers.pug
+++ b/src/components/single-performers/single-performers.pug
@@ -96,3 +96,5 @@ mixin single-performers()
           +e.item
             +e('a')(href='#') Заложить кирпичом проемы и вставить окно вставить окно вставить окно вставить окно
             +e('span') Алексей | Цена договорная
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
