--- a/src/components/all-vacancies/all-vacancies.pug
+++ b/src/components/all-vacancies/all-vacancies.pug
@@ -400,3 +400,5 @@ mixin all-vacancies()
           //        +e('span')
           //          +e('img')(src='assets/images/speaker-side-view.svg' alt='')
           //          | 4
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
