--- a/src/components/nhome/nhome.pug
+++ b/src/components/nhome/nhome.pug
@@ -97,5 +97,8 @@ mixin nhome()
       +e('a').footer-item.mob-hide(href='#') IT, компьютеры, интернет 28
       +e('a').footer-item.mob-hide(href='#') Администрация, руководство среднего звена 23
       +e('a').footer-item(href='#') все категории
+    +b('div').footer
+      +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
     +e('img').dots1(src='assets/images/bg-dots.png' alt='')
     +e('div').circle
+
