--- a/src/components/single-task/single-task.pug
+++ b/src/components/single-task/single-task.pug
@@ -83,3 +83,5 @@ mixin single-task()
           +e.item
             +e('a')(href='#') Заложить кирпичом проемы и вставить окно вставить окно вставить окно вставить окно
             +e('span') Алексей | Цена договорная
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
