--- a/src/components/single-vacancy/single-vacancy.pug
+++ b/src/components/single-vacancy/single-vacancy.pug
@@ -142,3 +142,5 @@ mixin single-vacancy()
             +e.info
               p Полная занятость, неполная занятость, удаленная работа, готовы взять студента. Высшее образование.
                 | Strategy partners - международная компания, занимающаяся стрстегическим консалтингом, расширяет свою команду...
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
