--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,4 +1,3 @@
 mixin footer()
-  footer.footer-wrap
-    .container
-      +b.footer
+  +b('footer').footer
+    +e('a').__craft-link(href='https://web-artcraft.com/' target='_blank') Разработано CraftGroup
