--- a/src/pages/single-vacancy.pug
+++ b/src/pages/single-vacancy.pug
@@ -1,6 +1,7 @@
 extends ../components/layout-default/layout-index
 include ../components/header/header
 include ../components/single-vacancy/single-vacancy
+include ../components/footer/footer
 
 block head
   - var pageTitle = 'Index Page';
