--- a/src/components/footer/footer.sass
+++ b/src/components/footer/footer.sass
@@ -1,11 +1,39 @@
 @import "../../shared/sass/imports"
 
+
+.resume, .single-vacancy
+  + .footer
+    @media (max-width: 1250px)
+      position: absolute
+      bottom: 0
+      left: 28%
+      z-index: 4
+
+    @media (max-width: 993px)
+      position: absolute
+      bottom: 0
+      left: 28%
+      margin: 1em
+
+.single-vacancy
+  + .footer
+    @media (max-width: 1500px)
+      position: absolute
+      bottom: 0
+      left: 55%
+      z-index: 4
+      margin-bottom: 0
+
+
+
+
+
 .footer
   position: absolute
   bottom: 0
   left: 55%
   margin: 1em
-  @media (max-width: 993px)
+
     left: 30%
     bottom: 59px
     width: 30%
